--- a/SqlInterpreter.cabal
+++ b/SqlInterpreter.cabal
@@ -22,5 +22,6 @@ executable SqlInterpreter
   build-depends:       base >=4.7 && <4.8
                        , split
                        , strings >= 1.1
+                       , directory >= 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
