--- a/SqlInterpreter.cabal
+++ b/SqlInterpreter.cabal
@@ -23,5 +23,6 @@ executable SqlInterpreter
                        , split
                        , strings >= 1.1
                        , directory >= 1.1
+                       , strict >= 0.3
   hs-source-dirs:      src
   default-language:    Haskell2010
